--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,13 @@
 language: node_js
-
-node_js:
+node_js: 
   - stable
-
 cache:
   directories:
-    - node_modules
+    "node_modules"
 
-script:
-  - npm run lint
-  - npm test
+before_script:
+  - npm run build
 
 after_success:
   - npm run coveralls
+  
