--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "babel-register": "^6.24.1",
     "chai": "^3.5.0",
     "chai-enzyme": "^1.0.0-beta.1",
+    "coveralls": "^2.13.0",
     "enzyme": "^3.0.0",
     "enzyme-adapter-react-16": "^1.0.0",
     "eslint": "^2.13.1",
